--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ MYSQL_DATABASE=go-post-api
 MYSQL_MAX_IDLE_CONNS=5
 MYSQL_MAX_OPEN_CONNS=10
 MYSQL_CONN_MAX_LIFETIME=30m
-REDIS_PASSWORD=
+REDIS_PASSWORD=secret
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DATABASE=0
