--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ MYSQL_USER=uo1
 MYSQL_PASSWORD=123456
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
-MYSQL_DATABASE=go-post-api
+MYSQL_DATABASE=go_post_api
 MYSQL_MAX_IDLE_CONNS=5
 MYSQL_MAX_OPEN_CONNS=10
 MYSQL_CONN_MAX_LIFETIME=30m
@@ -17,4 +17,4 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DATABASE=0
 REDIS_POOL_SIZE=10
-REDIS_TTL=1h
+REDIS_TTL=1m
