--- a/.env.example
+++ b/.env.example
@@ -6,14 +6,14 @@ JWT_TTL=48h
 PAGINATION_LIMIT=100
 MYSQL_USER=uo1
 MYSQL_PASSWORD=123456
-MYSQL_HOST=localhost
+MYSQL_HOST=mysql
 MYSQL_PORT=3306
-MYSQL_DATABASE=go_post_api
+MYSQL_DATABASE=go-post-api
 MYSQL_MAX_IDLE_CONNS=5
 MYSQL_MAX_OPEN_CONNS=10
 MYSQL_CONN_MAX_LIFETIME=30m
 REDIS_PASSWORD=secret
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DATABASE=0
 REDIS_POOL_SIZE=10
